<resources>
    <string name="app_name">eBook Shop</string>
    <string name="app_slogan">Manage and Review Library Books</string>

    <string name="recent">Recent</string>
    <string name="action_and_adventure_category">Action and Adventure</string>
    <string name="action_and_adventure_book1_name">Short At The Edge of The World</string>
    <string name="action_and_adventure_book1_price">12</string>
    <string name="action_and_adventure_book2_name">The World in Winter</string>
    <string name="action_and_adventure_book2_price">50</string>

    <string name="science_fiction_category">Science Fiction</string>
    <string name="fantasy_category">Fantasy</string>
    <string name="default_category_description">A default category created by the app for \'%s\' books</string>
    <string name="empty_category_message">Empty Category\nPlease add book(s) to display</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="please_wait">Please Wait</string>
    <string name="one_moment">Just a moment to load data!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_toolbar_subtitle">List of each category with two recent books</string>
    <string name="add_category">Add Category</string>
    <string name="add_book">Add Book</string>
    <string name="empty_general_list_header">List is Empty</string>
    <string name="empty_general_list_subheader">Please add more to display.</string>
    <string name="empty_category_list_header">List is Empty</string>
    <string name="empty_category_list_subheader">Please add at least one category to display.</string>
    <string name="empty_book_list_header">List is Empty</string>
    <string name="empty_book_list_subheader">Please add at least one book to display.</string>
    <string name="default_settings_title">Loading Default Settings</string>
    <string name="default_settings_subtitle">Few seconds for default settings to be configured, and the app will be ready for use.</string>
    <string name="category_name_hint">Category Name</string>
    <string name="category_description_hint">Category Description</string>
    <string name="add">Add</string>
    <string name="category_name_is_required">Category name is required</string>
    <string name="book_cover_is_required">Book cover is required</string>
    <string name="book_name_is_required">Book name is required</string>
    <string name="book_price_is_required">Book price is required</string>
    <string name="book_price_should_be_at_least">Book price should be at least 1</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="discard_changes_title">Discard Changes?</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_title">Delete Category?</string>
    <string name="confirm_delete_support_text">This will delete the category and all of its books.</string>
    <string name="discard_changes_support_text">Your changes have not been saved.</string>
    <string name="cancel">Cancel</string>
    <string name="error_toast">! ERROR !</string>
    <string name="duplicate_category_name_error">This Category Name is Duplicate</string>
    <string name="failed_to_add_category_error">Failed To Add New Category</string>
    <string name="duplicate_book_name_error">This Book Name is Duplicate</string>
    <string name="failed_to_add_book_error">Failed To Add New Book</string>
    <string name="failed_to_update_category_error">Failed To Update Category</string>
    <string name="unhandled_error">! ERROR !</string>
    <string name="book_name_hint">Book Name</string>
    <string name="book_price_hint">Book Price</string>
    <string name="success_toast">SUCCESS</string>
    <string name="failed_toast">FAILED</string>

    <!--  Filenames for Default Book Covers  -->
    <string name="action_and_adventure_book1_cover">actions_and_adventure_book1.png</string>
    <string name="action_and_adventure_book2_cover">actions_and_adventure_book2.png</string>
    <string name="fantasy_book1_cover">fantasy_book1.png</string>
    <string name="fantasy_book2_cover">fantasy_book2.png</string>
    <string name="science_fiction_book1_cover">science_fiction_book1.png</string>
    <string name="science_fiction_book2_cover">science_fiction_book2.png</string>
    <string name="science_fiction_book1_name">Sunset Over Amsterdam</string>
    <string name="science_fiction_book1_price">15.99</string>
    <string name="science_fiction_book2_name">Enceladus</string>
    <string name="science_fiction_book2_price">18</string>
    <string name="fantasy_book1_name">The Good Hawk</string>
    <string name="fantasy_book1_price">75.10</string>
    <string name="fantasy_book2_name">Keepers</string>
    <string name="fantasy_book2_price">33.25</string>
    <string name="category_book_list_toolbar_subtitle">Category books sorted by latest update</string>
    <string name="search_hint">Search</string>
    <string name="unsupported_image_format">Only PNG/JPEG/JPG Image Format Allowed</string>
    <string name="failed_to_load_dahsboard_list">Failed To Load Dashboard List</string>
    <string name="failed_to_load_book_list">Failed To Load Book List</string>
    <string name="edit_book">Edit Book</string>
    <string name="dashboard_drawer_settings_title">Settings</string>
    <string name="dashboard_drawer_reset_title">Reset To Defaults</string>
    <string name="dashboard_drawer_open">Open Dashboard Drawer</string>
    <string name="dashboard_drawer_close">Close Dashboard Drawer</string>
    <string name="default_settings_loaded_successfully">Default Settings Loaded Successfully</string>
    <string name="unable_to_delete_book_cover">Unable to delete book cover</string>
    <string name="failed_to_load_category_book_list">Failed To Load Book List</string>
</resources>
